atualizar conteúdo da aula de ggplot2

--- a/slides/3_visualizacao/slides_visualizacao.qmd
+++ b/slides/3_visualizacao/slides_visualizacao.qmd
@@ -2,7 +2,7 @@
 title: "Visualização de dados"
 subtitle: "Aula 3"
 author: "Bruno Montezano"
-institute: "Programa de Pós-Graduação em Psiquiatria e Ciências do Comportamento\nUniversidade Federal do Rio Grande do Sul"
+institute: "Grupo Alliance<br>Programa de Pós-Graduação em Psiquiatria e Ciências do Comportamento<br>Universidade Federal do Rio Grande do Sul"
 date: last-modified
 date-format: long
 lang: pt-br
@@ -11,20 +11,18 @@ execute:
 format:
   revealjs:
     incremental: true
+    smaller: true
     theme: [default, ../assets/custom.scss]
     logo: "../assets/logo_ufrgs.png"
 ---
 
-## Conteúdo de hoje {.smaller}
+## Conteúdo de hoje
 
-- O que é o R e por que usá-lo?
-- Visão geral do RStudio
-- Comandos básicos do R
-  - Vetores
-  - Matrizes
-  - Data frames
-  - Funções
-  - Pacotes
-  - Ajuda
-  
-##
+- Pacote `ggplot2`
+  - Gramática dos gráficos
+  - Estética
+  - Mapeamento
+- Gráficos básicos
+- Personalização de gráficos
+- Exemplos práticos
+- Extensões de ggplot2
